<resources>
    <string name="app_name">Binaria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_update">Send Money</string>
    <string name="send_money">Send Money</string>
    <string name="full_names">Full Names</string>
    <string name="receiving_amount">Receiving Amount</string>
    <string name="amount">Amount</string>
    <string name="go_home">Go Home</string>
    <string name="transaction_has_been_successfully_sent_for_processing">Transaction has been successfully sent for processing</string>
</resources>