<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/homelayout"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">



                <ImageView
                    android:id="@+id/imageholder"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_sendmoney"
                    android:contentDescription="Send Money Icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    
                    android:gravity="center|start"
                    android:paddingTop="3dp"
                    android:text="@string/send_money"
                    android:textAppearance="@style/AppbarTitle"
                    android:textColor="@android:color/black"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/rateinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="16dp"


                    android:gravity="center"
                   android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="16dp"
                    
                    android:gravity="center|start"
                    android:text="Name"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        
                        android:hint="@string/full_names"
                        android:singleLine="true"
                        android:textColor="#000000"
                         />


                </RelativeLayout>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="16dp"
                    
                    android:gravity="center|start"
                    android:text="Mobile"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_hintExampleNumber="true"
                    app:ccp_defaultNameCode="KE"
                    app:ccp_customMasterCountries="KE,NG,TZ,UG"  />
                <EditText
                    android:id="@+id/editmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="phone"
                    android:inputType="phone"
                    android:singleLine="true" />
            </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="16dp"

                    android:gravity="center|start"
                    android:text="Amount(in binary)"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editamount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
android:maxLength="18"
                        android:digits="0,1"
                        android:hint="@string/amount"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="#000000"
                        />


                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="16dp"

                    android:gravity="center"
                    android:text="@string/receiving_amount"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
android:id="@+id/recamount"
                    android:gravity="center"
                    android:text="N/A"
                    android:textColor="@color/purple_700"
                    android:textSize="21sp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_update"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    
                    android:text="@string/label_update"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorAccent" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
